Fix margins and spacing on backmatter pages

--- a/content/_assets/styles/custom.css
+++ b/content/_assets/styles/custom.css
@@ -865,9 +865,38 @@ main.scores-cover-page + .quire-menu  .scores-menu__title {
   text-indent: -1rem;
   padding-left: 1rem;
 }
+@media screen {
+  .scores-copyright-page .quire-page__content .container .content p {
+    text-indent: 0;
+  }
+
+  .scores-copyright-page .quire-page__content .container .content h2 {
+    margin-top: 2.5rem;
+  }
+  .scores-copyright-page .quire-page__content .container .content h3 {
+    margin-bottom: 0;
+  }
+  .scores-copyright-page .quire-page__content .container .content .colophon p,
+  .scores-copyright-page .quire-page__content .container .content .copyright p, 
+  .scores-copyright-page .quire-page__content .container .content .pub-info p {
+    margin-bottom: 1rem;
+  }
+}
 
 /* BACKMATTER PAGES
 ============================================================================= */
+@media screen {
+  .quire-page.backmatter-page .quire-page__content .container .content {
+    padding: 0;
+    margin: 0 auto;
+    max-width: 36rem;
+    line-height: 1.3;
+    margin-bottom: 4rem;
+  }
+  .quire-page.backmatter-page .quire-page__content .container .content p {
+    line-height: 1.3;
+  }
+}
 .scores-pdf-about-page .quire-page__content .container .content,
 .scores-acknowledgments-page .quire-page__content .container .content,
 .scores-contributors-page .quire-page__content .container .content {
